move prettier, husky, eslint, and other files to root

--- a/fe/src/scss/application.scss
+++ b/fe/src/scss/application.scss
@@ -1,39 +1,39 @@
 // Imports
-@import "bourbon";
-@import "neat";
+@import 'bourbon';
+@import 'neat';
 
 // Settings
-@import "settings/settings";
+@import 'settings/settings';
 
 // Base Styles
-@import "base/typography";
+@import 'base/typography';
 
 // Base Components
-@import "components/buttons";
-@import "components/datepicker";
-@import "components/empty-state";
-@import "components/flash";
-@import "components/footer";
-@import "components/forms";
-@import "components/page-error";
-@import "components/grid";
-@import "components/modal";
-@import "components/navigation";
-@import "components/page-header";
-@import "components/server-status-overlay";
-@import "components/skip-nav-link";
-@import "components/spinner";
-@import "components/table";
-@import "components/tooltip";
-@import "components/pagination";
+@import 'components/buttons';
+@import 'components/datepicker';
+@import 'components/empty-state';
+@import 'components/flash';
+@import 'components/footer';
+@import 'components/forms';
+@import 'components/page-error';
+@import 'components/grid';
+@import 'components/modal';
+@import 'components/navigation';
+@import 'components/page-header';
+@import 'components/server-status-overlay';
+@import 'components/skip-nav-link';
+@import 'components/spinner';
+@import 'components/table';
+@import 'components/tooltip';
+@import 'components/pagination';
 
 // Project Specific Components
 
 // Page Styles
-@import "pages/main";
-@import "pages/styleguide";
+@import 'pages/main';
+@import 'pages/styleguide';
 
 // Project Specific Global Styles
 
 // Styles for Assistive Technologies (keep these last!)
-@import "components/visually-hidden";
+@import 'components/visually-hidden';
