--- a/fe/src/scss/components/_spinner.scss
+++ b/fe/src/scss/components/_spinner.scss
@@ -5,14 +5,14 @@ Spinner
 .spinner {
   text-align: center;
 
-  &:after{
+  &:after {
     animation: spin 0.5s linear infinite;
     border: 3px solid $primary-base;
     border-radius: 50%;
     border-top-color: $primary-base;
     border-right-color: transparent;
     border-top-color: transparent;
-    content:"";
+    content: '';
     display: inline-block;
     height: 30px;
     width: 30px;
@@ -20,5 +20,7 @@ Spinner
 }
 
 @keyframes spin {
-  to { transform: rotate(360deg); }
+  to {
+    transform: rotate(360deg);
+  }
 }
