--- a/fe/src/scss/components/_table.scss
+++ b/fe/src/scss/components/_table.scss
@@ -1,16 +1,17 @@
 /*-----------------------
 Table
 -----------------------*/
-table{
+table {
   background-color: $white-base;
   table-layout: fixed;
   width: 100%;
 
-  thead{
+  thead {
     border-bottom: 2px solid $black-base;
   }
 
-  th, td {
+  th,
+  td {
     display: table-cell;
     @include rem(margin, 15px 5px);
     @include rem(padding, 12px 10px);
@@ -20,29 +21,30 @@ table{
     vertical-align: middle;
   }
 
-  th, td:before {
+  th,
+  td:before {
     color: $grey-base;
     font-weight: $bold;
     @include s-base;
   }
 
-  th{
+  th {
     color: $black-base;
     width: 100%;
   }
 
-  th.sortable{
+  th.sortable {
     cursor: pointer;
   }
 
-  tbody{
+  tbody {
     overflow: auto;
 
-    tr{
-      &.clickable{
+    tr {
+      &.clickable {
         cursor: pointer;
       }
-      &:nth-child(even){
+      &:nth-child(even) {
         background-color: $white-light;
       }
     }
@@ -52,15 +54,15 @@ table{
 /*-----------------------
 Scrollable
 -----------------------*/
-.scrollable-table{
+.scrollable-table {
   overflow: auto;
 }
 
 /*-----------------------
 Filter Table Arrows
 -----------------------*/
-th.sortable{
-  &:after{
+th.sortable {
+  &:after {
     display: inline-block;
     font-size: 12px;
     @include rem(margin-left, 10px);
@@ -70,7 +72,7 @@ th.sortable{
   &.order-descend:after {
     background-image: url('../images/utility-icons/dropdown.svg');
   }
-  &.order-ascend:after{
+  &.order-ascend:after {
     background-image: url('../images/utility-icons/dropdown.svg');
     transform: scaleY(-1);
     filter: FlipV;
