--- a/fe/src/scss/settings/mixins/_rem.scss
+++ b/fe/src/scss/settings/mixins/_rem.scss
@@ -1,4 +1,4 @@
-@use "sass:math";
+@use 'sass:math';
 
 //REM MIXIN FROM ROLODEX - BELLYCARD
 
@@ -16,21 +16,19 @@
   $rem-values: ();
 
   @each $value in $values {
-    @if $value == 0 or type-of($value) != "number" {
+    @if $value == 0 or type-of($value) != 'number' {
       $px-values: append($px-values, $value);
       $rem-values: append($rem-values, $value);
-    }
-
-    @else {
+    } @else {
       $unit: unit($value);
       $val: remove-unit($value);
 
-      @if $unit == "px" {
+      @if $unit == 'px' {
         $px-values: append($px-values, $val + px);
         $rem-values: append($rem-values, math.div($val, $root) + rem);
       }
 
-      @if $unit == "rem" {
+      @if $unit == 'rem' {
         $px-values: append($px-values, $val * $root + px);
         $rem-values: append($rem-values, $val + rem);
       }
@@ -39,9 +37,7 @@
 
   @if $rem-values == $px-values {
     #{$property}: $rem-values;
-  }
-
-  @else {
+  } @else {
     #{$property}: $px-values;
     #{$property}: $rem-values;
   }
